--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviderLegalEntities/Get.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviderLegalEntities/Get.cshtml
@@ -122,7 +122,7 @@
                                     <td class="govuk-table__cell" colspan="2">
                                         <div class="govuk-inset-text govuk-!-margin-top-0 govuk-!-margin-bottom-2">
                                             <p class="govuk-body">
-                                                This provider has been stopped from recruiting apprentices on behalf of employers.
+                                                This provider is no longer able to recruit apprentices on behalf of employers.
                                             </p>
                                         </div>
                                     </td>
